# Niqaa

./: LICENSE  Niqaa.cabal  README.md  stack.yaml
app/: GUI.hs  Main.hs  Ships.hs  Ships.txt  data.txt
app/data/: base.txt  bigBullet.txt  blaqiiiiip.txt  broadSide.txt  davanja.txt  gatlingGun.txt  gun.txt  hija.txt  howitzer.txt  jin.txt  kiraara.txt  kytiiri.txt  largeblock.txt  machineGun.txt  mass driver.txt  mediBase.txt  megaLaser.txt  miniBase.txt  missile.txt  pischki.txt  shield.txt  slingShot.txt  superlarge.txt  tiktok.txt  utyra.txt  videre.txt  vijossk.txt
src/: Lib.hs  Misc.hs
src/Controller/: Main.hs  Part.hs  Physics.hs  Ship.hs  Shot.hs
src/GUI/: Main.hs
src/Model/: Action.hs  Main.hs  Part.hs  Physics.hs  Ship.hs  Shot.hs
