name:                Niqaa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Niqaa#readme
license:             BSD3
license-file:        LICENSE
author:              Reed Oei
maintainer:          me@reedoei.com
copyright:           2017 Reed Oei
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Model.Main,
                       Model.Part,
                       Model.Ship,
                       Model.Shot,
                       Model.Action,
                       Model.Physics,
                       Controller.Main,
                       Controller.Part,
                       Controller.Ship,
                       Controller.Shot,
                       Controller.Physics,
                       Misc,
                       GUI.Main
  build-depends:       base >= 4.7 && < 5,
                       linear,
                       containers,
                       listsafe,
                       random,
                       helm
  default-language:    Haskell2010

executable Niqaa
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Ships, GUI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Niqaa,
                       helm,
                       linear,
                       containers,
                       listsafe,
                       random,
                       MissingH
  default-language:    Haskell2010

test-suite Niqaa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Niqaa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Kytuzian/Niqaa

